# pixfrog

./: .clang-format  .clang-format-ignore  .gitignore  AGENT.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  TODO.md  partitions.csv  sdkconfig.ci.lcdcam  sdkconfig.ci.oled  sdkconfig.ci.tft  sdkconfig.defaults  sdkconfig.parlio
.claude/skills/ci-local/: SKILL.md
.claude/skills/emulator/: SKILL.md
.claude/skills/flash/: SKILL.md
.claude/skills/format/: SKILL.md
.claude/skills/host-tests/: SKILL.md
.claude/skills/hw-validate/: SKILL.md
.claude/skills/regen-fonts/: SKILL.md
.claude/skills/regen-splash/: SKILL.md
.claude/skills/uartctl/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/pages/: about-en.html  about-fr.html  about.html  docs-en.html  docs-fr.html  docs.html  flash-en.html  flash-fr.html  flash.html  index-en.html  index-fr.html  index.html  lang.js  manifest.json  style.css
.github/web-flasher/: about.html  docs.html  index.html  style.css
.github/workflows/: ci.yml  pages.yml  release.yml
boards/: esp32_p4_devkit.h
components/artnet/: CMakeLists.txt
components/artnet/include/: artnet.h  artnet_parser.h
components/artnet/src/: artnet.cpp
components/artnet/test/: CMakeLists.txt  test_artnet_parser.cpp
components/config_store/: CMakeLists.txt
components/config_store/include/: config_store.h
components/config_store/src/: config_store.cpp
components/config_store/test/: CMakeLists.txt  test_config_store.cpp
components/control_console/: CMakeLists.txt
components/control_console/include/: control_console.h
components/control_console/src/: control_console.cpp
components/dmx_manager/: CMakeLists.txt
components/dmx_manager/include/: dmx_manager.h
components/dmx_manager/src/: dmx_logic.h  dmx_manager.cpp
components/dmx_manager/test/: CMakeLists.txt  test_dmx_logic.cpp
components/fpp_sync/: CMakeLists.txt
components/fpp_sync/include/: fpp_sync.h  fpp_sync_parser.h
components/fpp_sync/src/: fpp_sync.cpp
components/fpp_sync/test/: CMakeLists.txt  test_fpp_sync_parser.cpp
components/fseq_player/: CMakeLists.txt
components/fseq_player/include/: fseq_player.h
components/fseq_player/src/: fseq_format.h  fseq_player.cpp
components/fseq_player/test/: CMakeLists.txt  gen_fseq.py  test_fseq_parser.cpp
components/lcd_cam_output/: CMakeLists.txt  Kconfig
components/lcd_cam_output/include/: lcd_cam_output.h
components/lcd_cam_output/src/: lcd_cam_output.cpp  output_common.h  parlio_output.cpp
components/led_output/: CMakeLists.txt  Kconfig
components/led_output/include/: led_output.h
components/led_output/src/: lcd_cam_output.cpp  output_common.h  parlio_output.cpp
components/led_protocols/: CMakeLists.txt
components/led_protocols/include/: led_protocols.h
components/led_protocols/src/: encoder_dmx.cpp  encoder_dmx.h  encoder_frame.cpp  encoder_nrz.cpp  encoder_nrz.h  encoder_spi.cpp  encoder_spi.h  led_protocols.cpp
components/led_protocols/test/: CMakeLists.txt  test_led_protocols.cpp
components/sacn/: CMakeLists.txt
components/sacn/include/: sacn.h  sacn_parser.h
components/sacn/src/: sacn.cpp
components/sacn/test/: CMakeLists.txt  test_sacn_parser.cpp
components/ui/: CMakeLists.txt  Kconfig
components/ui/include/: ui.h
components/ui/src/: canvas_oled.cpp  canvas_tft.cpp  encoder_seesaw.cpp  font.h  font_5x8.cpp  font_5x8.h  font_data.cpp  font_oled.cpp  icons_net.h  icons_status.h  menu.cpp  oled_ssd1306.cpp  splash.cpp  splash_anim.cpp  splash_oled.cpp  tft_st7789.cpp  ui.cpp  ui_internal.h
components/web_config/: CMakeLists.txt
components/web_config/include/: web_config.h
components/web_config/src/: web_config.cpp  web_ui.html
docs/: ARCHITECTURE.md  HARDWARE.md  PROTOCOLS.md
docs/img/: README.md
emulator/: CMakeLists.txt  README.md
emulator/src/: dmx_emu.h  dmx_host.cpp  encoder_emu.h  encoder_host.cpp  lcd_host.cpp  main_emulator.cpp
hardware/pixfrog_satellite/: README.md  pixfrog_satellite.kicad_pcb  pixfrog_satellite.kicad_prl  pixfrog_satellite.kicad_pro  pixfrog_satellite.kicad_sch
hardware/pixfrog_satellite/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
hardware/pixfrog_shield/: PixFrog_Shield.kicad_pcb  PixFrog_Shield.kicad_pro  PixFrog_Shield.kicad_sch  README.md
hardware/pixfrog_shield/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
main/: CMakeLists.txt  main.cpp
tools/: artnet_validate.py  ci-local.sh  rasterize_icons.py  uartctl.py  uartctl.sh
tools/emulator/: CMakeLists.txt  README.md  smoke.sh
tools/emulator/shims/driver/: i2c_master.h
tools/emulator/src/: config_host.cpp  dmx_emu.h  dmx_host.cpp  encoder_emu.h  encoder_host.cpp  fpp_host.cpp  fseq_host.cpp  led_output_host.cpp  main_emulator.cpp  sacn_host.cpp  tft_emu.h  tft_sdl.cpp  web_host.cpp
tools/fontgen/: CMakeLists.txt  README.md  fontgen.cpp
tools/hw_validate/: README.md  pixfrog_uart.py  run_all.py  validate_artnet.py  validate_auth.py  validate_failsafe.py  validate_fseq.py  validate_identify_gamma.py  validate_ota.py  validate_sacn.py  validate_scenes.py  validate_webops.py
tools/oledfont/: README.md  gen.py
tools/oledsplash/: README.md  gen  gen.cpp
tools/splashgen/: CMakeLists.txt  README.md  splashgen.cpp
